--- a/project.config
+++ b/project.config
@@ -1,9 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_system/system_framework
 [project]
-	description = "Domain: Base;"\n\
-"Maintainers: Shinjae Lee,William Douglas;"\n\
-"Integrators: Bogon Kim;"\n\
-"Reviewers: Jungmin Cho;"\n\
-"Licenses: Public-domain;"\n\
-
+	description = "Domain: System / System Framework;"
